debug: Add extensive console logs in script.js and inline script in index.html for thorough debugging of UI rendering issues

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KidsAI 拼拼豆豆制作デモ</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        // Very early log to check window dimensions
+        console.log("Inline script: window.innerWidth =", window.innerWidth, "window.innerHeight =", window.innerHeight);
+    </script>
 </head>
 <body>
     <div class="container">
