feat: 更新 index.html 进行日语名称更改、SEO TDK 优化，并添加圆形 favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KidsAI 拼拼豆豆制作デモ</title>
+    <title>アイロンビーズ制作ツール</title>
+    <meta name="description" content="オンラインでアイロンビーズのデザインを作成できる無料ツール。ズーム、パン、色選択機能で自分だけのピクセルアートをデザインしよう！">
+    <meta name="keywords" content="アイロンビーズ, パーラービーズ, ピクセルアート, ドット絵, 無料, オンラインツール, デザイン, ハンドメイド, 知育玩具">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚫</text></svg>">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
