feat: Comprehensive SEO optimization for index.html (Canonical, H2/H3, Meta Title, Social Media Meta Tags)

--- a/index.html
+++ b/index.html
@@ -3,15 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>アイロンビーズ制作ツール</title>
+    <title>アイロンビーズ制作ツール | 無料オンラインで簡単！自分だけのピクセルアートデザイン</title>
     <meta name="description" content="オンラインでアイロンビーズのデザインを作成できる無料ツール。ズーム、パン、色選択機能で自分だけのピクセルアートをデザインしよう！">
     <meta name="keywords" content="アイロンビーズ, パーラービーズ, ピクセルアート, ドット絵, 無料, オンラインツール, デザイン, ハンドメイド, 知育玩具">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://martinfly1016.github.io/perler_bead/">
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:title" content="アイロンビーズ制作ツール | 無料オンラインで簡単！自分だけのピクセルアートデザイン">
+    <meta property="og:description" content="オンラインでアイロンビーズのデザインを作成できる無料ツール。ズーム、パン、色選択機能で自分だけのピクセルアートをデザインしよう！">
+    <meta property="og:image" content="https://martinfly1016.github.io/perler_bead/banner_400x100.png">
+    <meta property="og:url" content="https://martinfly1016.github.io/perler_bead/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="アイロンビーズ制作ツール | 無料オンラインで簡単！自分だけのピクセルアートデザイン">
+    <meta name="twitter:description" content="オンラインでアイロンビーズのデザインを作成できる無料ツール。ズーム、パン、色選択機能で自分だけのピクセルアートをデザインしよう！">
+    <meta name="twitter:image" content="https://martinfly1016.github.io/perler_bead/banner_400x100.png">
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚫</text></svg>">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>キッズAI 拼拼豆豆制作</h1>
+        <h1>アイロンビーズ制作ツール</h1> <!-- Changed H1 to match new title -->
+        <p>無料で簡単にオリジナルのアイロンビーズ作品をデザインしましょう。</p> <!-- Added paragraph for more content/H2/H3 context -->
+        <h2>ツール機能</h2> <!-- Added H2 -->
+        <ul>
+            <li>ズームとパンで広い範囲を自由に編集</li>
+            <li>豊富なカラーパレットで表現豊かに</li>
+            <li>完成したデザインはPNG画像でダウンロード可能</li>
+        </ul>
         <div class="controls">
             <div class="color-palette" id="colorPalette">
                 <!-- Colors will be injected by JavaScript -->
