refactor: Optimize page layout by removing redundant introductory paragraph

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>アイロンビーズ制作ツール</h1> <!-- Changed H1 to match new title -->
-        <p>無料で簡単にオリジナルのアイロンビーズ作品をデザインしましょう。</p> <!-- Added paragraph for more content/H2/H3 context -->
-        <h2>ツール機能</h2> <!-- Added H2 -->
+        <h1>アイロンビーズ制作ツール</h1>
+        <h2>ツール機能</h2>
         <ul>
             <li>ズームとパンで広い範囲を自由に編集</li>
             <li>豊富なカラーパレットで表現豊かに</li>
