refactor: Further optimize page layout, retaining only H1 and H2

--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
 <body>
     <div class="container">
         <h1>アイロンビーズ制作ツール</h1>
-        <h2>ツール機能</h2>
-        <ul>
-            <li>ズームとパンで広い範囲を自由に編集</li>
-            <li>豊富なカラーパレットで表現豊かに</li>
-            <li>完成したデザインはPNG画像でダウンロード可能</li>
-        </ul>
+        <h2>無料で遊ぼう！</h2>
         <div class="controls">
             <div class="color-palette" id="colorPalette">
                 <!-- Colors will be injected by JavaScript -->
