fix: Correct canonical URL and og:url to beads.mojimoon.com/index.html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="keywords" content="アイロンビーズ, パーラービーズ, ピクセルアート, ドット絵, 無料, オンラインツール, デザイン, ハンドメイド, 知育玩具">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://martinfly1016.github.io/perler_bead/">
+    <link rel="canonical" href="https://beads.mojimoon.com/index.html">
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:title" content="アイロンビーズ制作ツール | 無料オンラインで簡単！自分だけのピクセルアートデザイン">
     <meta property="og:description" content="オンラインでアイロンビーズのデザインを作成できる無料ツール。ズーム、パン、色選択機能で自分だけのピクセルアートをデザインしよう！">
     <meta property="og:image" content="https://martinfly1016.github.io/perler_bead/banner_400x100.png">
-    <meta property="og:url" content="https://martinfly1016.github.io/perler_bead/">
+    <meta property="og:url" content="https://beads.mojimoon.com/index.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Meta Tags -->
