refactor: Simplify H1 title to 'アイロンビーズ'

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>アイロンビーズ制作ツール</h1>
+        <h1>アイロンビーズ</h1>
         <h2>無料で遊ぼう！</h2>
         <div class="controls">
             <div class="color-palette" id="colorPalette">
