--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <meta name="twitter:description" content="オンラインでアイロンビーズのデザインを作成できる無料ツール。ズーム、パン、色選択機能で自分だけのピクセルアートをデザインしよう！">
     <meta name="twitter:image" content="https://martinfly1016.github.io/perler_bead/banner_400x100.png">
 
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WD9XP5ERGX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-WD9XP5ERGX');
+    </script>
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚫</text></svg>">
     <link rel="stylesheet" href="style.css">
 </head>
